--- a/index.html
+++ b/index.html
@@ -19,14 +19,142 @@
       <a href="contacto.html">Contacto</a>
     </nav>
 
-    <main>
-      <h2>Nuestros Productos</h2>
-    </main>
-
     <section>
       <h2>Catergorías de Producto</h2>
-      <img src="img/categoria1.jpg" alt="Categoria de producto" />
+      <div>
+        <img src="img/categoria1.jpg" alt="Categoria de producto" />
+        <a href="#">Oficina</a>
+      </div>
+      <div>
+        <img src="img/categoria2.jpg" alt="Categoria de producto" />
+        <a href="#">Hogar</a>
+      </div>
+      <div>
+        <img src="img/categoria3.jpg" alt="Categoria de producto" />
+        <a href="#">Cocina</a>
+      </div>
     </section>
+
+    <section>
+      <div>
+        <h2>Sobre Nosotross</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
+          ratione officia porro dolorem nemo ipsam nam necessitatibus. Labore,
+          quod quam laudantium voluptatem ratione facere ad doloribus eveniet
+          in, neque velit?
+        </p>
+      </div>
+    </section>
+
+    <main>
+      <h2>Nuestros Productos</h2>
+      <div>
+        <div>
+          <img src="img/producto1.jpg" alt="Imagen producto" />
+          <div>
+            <h3>Producto 1</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+              accusamus perferendis minima accusantium doloremque quasi, hic sit
+              itaque sequi omnis autem ut iusto tempore dolor iure, eligendi
+              aliquid impedit odit?
+            </p>
+            <p>$1,000.000</p>
+
+            <a href="#">Agregar al Carrito</a>
+          </div>
+          <!--Info Producto -->
+        </div>
+        <!--Producto -->
+        <div>
+          <img src="img/producto2.jpg" alt="Imagen producto" />
+          <div>
+            <h3>Producto 2</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+              accusamus perferendis minima accusantium doloremque quasi, hic sit
+              itaque sequi omnis autem ut iusto tempore dolor iure, eligendi
+              aliquid impedit odit?
+            </p>
+            <p>$1,000.000</p>
+
+            <a href="#">Agregar al Carrito</a>
+          </div>
+          <!--Info Producto -->
+        </div>
+        <!--Producto -->
+        <div>
+          <img src="img/producto3.jpg" alt="Imagen producto" />
+          <div>
+            <h3>Producto 3</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+              accusamus perferendis minima accusantium doloremque quasi, hic sit
+              itaque sequi omnis autem ut iusto tempore dolor iure, eligendi
+              aliquid impedit odit?
+            </p>
+            <p>$1,000.000</p>
+
+            <a href="#">Agregar al Carrito</a>
+          </div>
+          <!--Info Producto -->
+        </div>
+        <!--Producto -->
+        <div>
+          <img src="img/producto4.jpg" alt="Imagen producto" />
+          <div>
+            <h3>Producto 4</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+              accusamus perferendis minima accusantium doloremque quasi, hic sit
+              itaque sequi omnis autem ut iusto tempore dolor iure, eligendi
+              aliquid impedit odit?
+            </p>
+            <p>$1,000.000</p>
+
+            <a href="#">Agregar al Carrito</a>
+          </div>
+          <!--Info Producto -->
+        </div>
+        <!--Producto -->
+        <div>
+          <img src="img/producto5.jpg" alt="Imagen producto" />
+          <div>
+            <h3>Producto 5</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+              accusamus perferendis minima accusantium doloremque quasi, hic sit
+              itaque sequi omnis autem ut iusto tempore dolor iure, eligendi
+              aliquid impedit odit?
+            </p>
+            <p>$1,000.000</p>
+
+            <a href="#">Agregar al Carrito</a>
+          </div>
+          <!--Info Producto -->
+        </div>
+        <!--Producto -->
+        <div>
+          <img src="img/producto6.jpg" alt="Imagen producto" />
+          <div>
+            <h3>Producto 6</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+              accusamus perferendis minima accusantium doloremque quasi, hic sit
+              itaque sequi omnis autem ut iusto tempore dolor iure, eligendi
+              aliquid impedit odit?
+            </p>
+            <p>$1,000.000</p>
+
+            <a href="#">Agregar al Carrito</a>
+          </div>
+          <!--Info Producto -->
+        </div>
+        <!--Producto -->
+      </div>
+      <!--Fin de Listado de Productos -->
+    </main>
 
     <footer>
       <p>&copy; Todos los derechos reservados, TiendaMuebles</p>
