--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ecommerce</title>
+    <link rel="stylesheet" href="css/app.css">
+    <title>Ecommerce - Home</title>
   </head>
   <body>
     <header>
-      <h1>Tienda Muebles</h1>
+      <h1>Tienda <span>Muebles</span></h1>
     </header>
 
-    <nav>
+    <nav class="navegacion">
       <a href="index.html">Inicio</a>
       <a href="nosotros.html">Nosotros</a>
       <a href="tienda.html">Tienda</a>
@@ -20,7 +21,7 @@
     </nav>
 
     <section>
-      <h2>Catergorías de Producto</h2>
+      <h2>Catergorías de <span>Producto</span></h2>
       <div>
         <img src="img/categoria1.jpg" alt="Categoria de producto" />
         <a href="#">Oficina</a>
@@ -35,7 +36,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="sobre-nosotros">
       <div>
         <h2>Sobre Nosotross</h2>
         <p>
@@ -101,7 +102,7 @@
           <!--Info Producto -->
         </div>
         <!--Producto -->
-        <div>
+        <div> 
           <img src="img/producto4.jpg" alt="Imagen producto" />
           <div>
             <h3>Producto 4</h3>
@@ -157,6 +158,35 @@
     </main>
 
     <footer>
+      <div>
+        <h3>Categorías</h3>
+        <nav>
+          <a href="#">Cocina</a>
+          <a href="#">Oficina</a>
+          <a href="#">Jardín</a>
+          <a href="#">Cochera</a>
+          <a href="#">Dormitorios</a>
+        </nav>
+      </div>
+      <div>
+        <h3>Sobre Nosotros</h3>
+        <nav>
+          <a href="#">Nuestra Historia</a>
+          <a href="#">Misión, Visión y Valores</a>
+          <a href="#">Carreras</a>
+          <a href="#">Política de Privacidad</a>
+          <a href="#">Términos del Servicio</a>
+        </nav>
+      </div>
+      <div>
+        <h3>Soporte</h3>
+        <nav>
+          <a href="#">Preguntas Frecuentes</a>
+          <a href="#">Ayuda en Línea</a>
+          <a href="#">Confianza y Seguridad</a>
+          
+        </nav>
+      </div>
       <p>&copy; Todos los derechos reservados, TiendaMuebles</p>
     </footer>
   </body>
