--- a/index.html
+++ b/index.html
@@ -3,57 +3,76 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/app.css">
-    <title>Ecommerce - Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;700&family=Playfair+Display:ital@1&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/app.css" />
+    <title>MuebleArte</title>
   </head>
   <body>
-    <header>
-      <h1>Tienda <span>Muebles</span></h1>
+    <div class="contenedor-navegacion">
+      <a href="index.html"
+        ><h1 class="nombre-sitio">Mueble<span>Arte</span></h1></a
+      >
+      <nav class="nav-principal contenedor">
+        <a class="enlace-activo" href="index.html">Inicio</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="tienda.html">Tienda</a>
+        <a href="blog.html">Blog</a>
+        <a href="galeria.html">Galeria</a>
+        <a href="contacto.html">Contacto</a>
+      </nav>
+    </div>
+    <header class="hero">
+      <h2 class="slogan">
+        Eleva tu espacio con muebles que fusionan estilo, comodidad y calidad
+        excepcional.<br />
+        Transforma tu hogar hoy
+      </h2>
     </header>
 
-    <nav class="navegacion">
-      <a href="index.html">Inicio</a>
-      <a href="nosotros.html">Nosotros</a>
-      <a href="tienda.html">Tienda</a>
-      <a href="blog.html">Blog</a>
-      <a href="galeria.html">Galeria</a>
-      <a href="contacto.html">Contacto</a>
-    </nav>
-
-    <section>
-      <h2>Catergorías de <span>Producto</span></h2>
-      <div>
-        <img src="img/categoria1.jpg" alt="Categoria de producto" />
-        <a href="#">Oficina</a>
-      </div>
-      <div>
-        <img src="img/categoria2.jpg" alt="Categoria de producto" />
-        <a href="#">Hogar</a>
-      </div>
-      <div>
-        <img src="img/categoria3.jpg" alt="Categoria de producto" />
-        <a href="#">Cocina</a>
+    <section class="contenedor categorias">
+      <h2 class="subtitulo">Categorías de <span>Producto</span></h2>
+      <div class="listado-categorias">
+        <div class="categoria">
+          <img src="img/categoria1.jpg" alt="Categoria de producto" />
+          <a href="#">Oficina</a>
+        </div>
+        <div class="categoria">
+          <img src="img/categoria2.jpg" alt="Categoria de producto" />
+          <a href="#">Hogar</a>
+        </div>
+        <div class="categoria">
+          <img src="img/categoria3.jpg" alt="Categoria de producto" />
+          <a href="#">Cocina</a>
+        </div>
       </div>
     </section>
 
     <section class="sobre-nosotros">
-      <div>
-        <h2>Sobre Nosotross</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
-          ratione officia porro dolorem nemo ipsam nam necessitatibus. Labore,
-          quod quam laudantium voluptatem ratione facere ad doloribus eveniet
-          in, neque velit?
-        </p>
+      <div class="contenedor sobre-nosotros-flex">
+        <div class="texto-nosotros">
+          <h2>Sobre Nosotros</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
+            ratione officia porro dolorem nemo ipsam nam necessitatibus. Labore,
+            quod quam laudantium voluptatem ratione facere ad doloribus eveniet
+            in, neque velit?
+          </p>
+        </div>
       </div>
     </section>
 
-    <main>
-      <h2>Nuestros Productos</h2>
-      <div>
-        <div>
+    <main class="contenido-principal contenedor">
+      <h2 class="subtitulo">Nuestros <span>Productos</span></h2>
+      <div class="listado-productos">
+        <div class="producto">
           <img src="img/producto1.jpg" alt="Imagen producto" />
-          <div>
+          <div class="texto-producto">
             <h3>Producto 1</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
@@ -61,16 +80,16 @@
               itaque sequi omnis autem ut iusto tempore dolor iure, eligendi
               aliquid impedit odit?
             </p>
-            <p>$1,000.000</p>
+            <p class="precio">$1,000.000</p>
 
-            <a href="#">Agregar al Carrito</a>
+            <a class="btn" href="#">Agregar al Carrito</a>
           </div>
           <!--Info Producto -->
         </div>
         <!--Producto -->
-        <div>
+        <div class="producto">
           <img src="img/producto2.jpg" alt="Imagen producto" />
-          <div>
+          <div class="texto-producto">
             <h3>Producto 2</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
@@ -78,16 +97,16 @@
               itaque sequi omnis autem ut iusto tempore dolor iure, eligendi
               aliquid impedit odit?
             </p>
-            <p>$1,000.000</p>
+            <p class="precio">$1,000.000</p>
 
-            <a href="#">Agregar al Carrito</a>
+            <a class="btn" href="#">Agregar al Carrito</a>
           </div>
           <!--Info Producto -->
         </div>
         <!--Producto -->
-        <div>
+        <div class="producto">
           <img src="img/producto3.jpg" alt="Imagen producto" />
-          <div>
+          <div class="texto-producto">
             <h3>Producto 3</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
@@ -95,16 +114,16 @@
               itaque sequi omnis autem ut iusto tempore dolor iure, eligendi
               aliquid impedit odit?
             </p>
-            <p>$1,000.000</p>
+            <p class="precio">$1,000.000</p>
 
-            <a href="#">Agregar al Carrito</a>
+            <a class="btn" href="#">Agregar al Carrito</a>
           </div>
           <!--Info Producto -->
         </div>
         <!--Producto -->
-        <div> 
+        <div class="producto">
           <img src="img/producto4.jpg" alt="Imagen producto" />
-          <div>
+          <div class="texto-producto">
             <h3>Producto 4</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
@@ -112,16 +131,16 @@
               itaque sequi omnis autem ut iusto tempore dolor iure, eligendi
               aliquid impedit odit?
             </p>
-            <p>$1,000.000</p>
+            <p class="precio">$1,000.000</p>
 
-            <a href="#">Agregar al Carrito</a>
+            <a class="btn" href="#">Agregar al Carrito</a>
           </div>
           <!--Info Producto -->
         </div>
         <!--Producto -->
-        <div>
+        <div class="producto">
           <img src="img/producto5.jpg" alt="Imagen producto" />
-          <div>
+          <div class="texto-producto">
             <h3>Producto 5</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
@@ -129,16 +148,16 @@
               itaque sequi omnis autem ut iusto tempore dolor iure, eligendi
               aliquid impedit odit?
             </p>
-            <p>$1,000.000</p>
+            <p class="precio">$1,000.000</p>
 
-            <a href="#">Agregar al Carrito</a>
+            <a class="btn" href="#">Agregar al Carrito</a>
           </div>
           <!--Info Producto -->
         </div>
         <!--Producto -->
-        <div>
+        <div class="producto">
           <img src="img/producto6.jpg" alt="Imagen producto" />
-          <div>
+          <div class="texto-producto">
             <h3>Producto 6</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
@@ -146,9 +165,9 @@
               itaque sequi omnis autem ut iusto tempore dolor iure, eligendi
               aliquid impedit odit?
             </p>
-            <p>$1,000.000</p>
+            <p class="precio">$1,000.000</p>
 
-            <a href="#">Agregar al Carrito</a>
+            <a class="btn" href="#">Agregar al Carrito</a>
           </div>
           <!--Info Producto -->
         </div>
@@ -157,37 +176,38 @@
       <!--Fin de Listado de Productos -->
     </main>
 
-    <footer>
-      <div>
-        <h3>Categorías</h3>
-        <nav>
-          <a href="#">Cocina</a>
-          <a href="#">Oficina</a>
-          <a href="#">Jardín</a>
-          <a href="#">Cochera</a>
-          <a href="#">Dormitorios</a>
-        </nav>
+    <footer class="site-footer">
+      <div class="grid-footer contenedor">
+        <div>
+          <h3>Categorías</h3>
+          <nav class="footer-menu">
+            <a href="#">Cocina</a>
+            <a href="#">Oficina</a>
+            <a href="#">Jardín</a>
+            <a href="#">Cochera</a>
+            <a href="#">Dormitorios</a>
+          </nav>
+        </div>
+        <div>
+          <h3>Sobre Nosotros</h3>
+          <nav class="footer-menu">
+            <a href="#">Nuestra Historia</a>
+            <a href="#">Misión, Visión y Valores</a>
+            <a href="#">Carreras</a>
+            <a href="#">Política de Privacidad</a>
+            <a href="#">Términos del Servicio</a>
+          </nav>
+        </div>
+        <div>
+          <h3>Soporte</h3>
+          <nav class="footer-menu">
+            <a href="#">Preguntas Frecuentes</a>
+            <a href="#">Ayuda en Línea</a>
+            <a href="#">Confianza y Seguridad</a>
+          </nav>
+        </div>
       </div>
-      <div>
-        <h3>Sobre Nosotros</h3>
-        <nav>
-          <a href="#">Nuestra Historia</a>
-          <a href="#">Misión, Visión y Valores</a>
-          <a href="#">Carreras</a>
-          <a href="#">Política de Privacidad</a>
-          <a href="#">Términos del Servicio</a>
-        </nav>
-      </div>
-      <div>
-        <h3>Soporte</h3>
-        <nav>
-          <a href="#">Preguntas Frecuentes</a>
-          <a href="#">Ayuda en Línea</a>
-          <a href="#">Confianza y Seguridad</a>
-          
-        </nav>
-      </div>
-      <p>&copy; Todos los derechos reservados, TiendaMuebles</p>
+      <p class="copyright">&copy; Todos los derechos reservados, MuebleArte</p>
     </footer>
   </body>
 </html>
