--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,6 @@
               <div class="imagen">
                 <img src="img/nosotros.jpg" alt="Imagen de blog">
               </div>
-
               <div class="entrada-meta">
                 <p>Fecha: <span>7 de Enero de 2024</span></p>
                 <p>Escrito por: <span>Omar Solís</span></p>
@@ -74,9 +73,9 @@
             </article>
           </div>
 
-          <aside>
+          <aside class="aside">
             <h3>Otras Entradas de Blog</h3>
-            <ul>
+            <ul class="entradas-lista">
               <li><a href="entrada.html">Nuevos modelos 2024</a></li>
               <li><a href="entrada.html">Modelos Invierno 2023</a></li>
               <li><a href="entrada.html">Guía para Diseños de Interiores</a></li>
