--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2 class="slogan">
         Eleva tu espacio con muebles que fusionan estilo, comodidad y calidad
         excepcional.<br />
-        Transforma tu hogar hoy
+        Transforma tu hogar hoy!
       </h2>
     </header>
 
@@ -54,7 +54,7 @@
     </section>
 
     <section class="sobre-nosotros">
-      <div class="contenedor sobre-nosotros-flex">
+      <div class="contenedor sobre-nosotros-grid">
         <div class="texto-nosotros">
           <h2>Sobre Nosotros</h2>
           <p>
@@ -207,7 +207,7 @@
           </nav>
         </div>
       </div>
-      <p class="copyright">&copy; Todos los derechos reservados, MuebleArte</p>
+      <p class="copyright">&copy; Todos los derechos reservados <br> MuebleArte</p>
     </footer>
   </body>
 </html>
